--- a/index.html
+++ b/index.html
@@ -486,6 +486,153 @@
                   <img class="img-fluid image" src="img/portfolio/business6.jpg">
                 </a>
               </div>
+              <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-business">
+                <a class="lightbox" href="img/portfolio/business7.jpg">
+                  <img class="img-fluid image" src="img/portfolio/business7.jpg">
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-business">
+                <a class="lightbox" href="img/portfolio/business8.jpg">
+                  <img class="img-fluid image" src="img/portfolio/business8.jpg">
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-business">
+                <a class="lightbox" href="img/portfolio/business9.jpg">
+                  <img class="img-fluid image" src="img/portfolio/business9.jpg">
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-business">
+                <a class="lightbox" href="img/portfolio/business10.jpg">
+                  <img class="img-fluid image" src="img/portfolio/business10.jpg">
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-business">
+                <a class="lightbox" href="img/portfolio/business11.jpg">
+                  <img class="img-fluid image" src="img/portfolio/business11.jpg">
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-business">
+                <a class="lightbox" href="img/portfolio/business12.jpg">
+                  <img class="img-fluid image" src="img/portfolio/business12.jpg">
+                </a>
+              </div>
+
+              <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-business">
+                <a class="lightbox" href="img/portfolio/business13.jpg">
+                  <img class="img-fluid image" src="img/portfolio/business13.jpg">
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-business">
+                <a class="lightbox" href="img/portfolio/business14.jpg">
+                  <img class="img-fluid image" src="img/portfolio/business14.jpg">
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-business">
+                <a class="lightbox" href="img/portfolio/business15.jpg">
+                  <img class="img-fluid image" src="img/portfolio/business15.jpg">
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-business">
+                <a class="lightbox" href="img/portfolio/business16.jpg">
+                  <img class="img-fluid image" src="img/portfolio/business16.jpg">
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-business">
+                <a class="lightbox" href="img/portfolio/business17.jpg">
+                  <img class="img-fluid image" src="img/portfolio/business17.jpg">
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-business">
+                <a class="lightbox" href="img/portfolio/business18.jpg">
+                  <img class="img-fluid image" src="img/portfolio/business18.jpg">
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-business">
+                <a class="lightbox" href="img/portfolio/business19.jpg">
+                  <img class="img-fluid image" src="img/portfolio/business19.jpg">
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-business">
+                <a class="lightbox" href="img/portfolio/business20.jpg">
+                  <img class="img-fluid image" src="img/portfolio/business20.jpg">
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-business">
+                <a class="lightbox" href="img/portfolio/business21.jpg">
+                  <img class="img-fluid image" src="img/portfolio/business21.jpg">
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-business">
+                <a class="lightbox" href="img/portfolio/business22.jpg">
+                  <img class="img-fluid image" src="img/portfolio/business22.jpg">
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-business">
+                <a class="lightbox" href="img/portfolio/business23.jpg">
+                  <img class="img-fluid image" src="img/portfolio/business23.jpg">
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-business">
+                <a class="lightbox" href="img/portfolio/business24.jpg">
+                  <img class="img-fluid image" src="img/portfolio/business24.jpg">
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-business">
+                <a class="lightbox" href="img/portfolio/business25.jpg">
+                  <img class="img-fluid image" src="img/portfolio/business25.jpg">
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-business">
+                <a class="lightbox" href="img/portfolio/business26.jpg">
+                  <img class="img-fluid image" src="img/portfolio/business26.jpg">
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-business">
+                <a class="lightbox" href="img/portfolio/business27.jpg">
+                  <img class="img-fluid image" src="img/portfolio/business27.jpg">
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-business">
+                <a class="lightbox" href="img/portfolio/business28.jpg">
+                  <img class="img-fluid image" src="img/portfolio/business28.jpg">
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-business">
+                <a class="lightbox" href="img/portfolio/business29.jpg">
+                  <img class="img-fluid image" src="img/portfolio/business29.jpg">
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-business">
+                <a class="lightbox" href="img/portfolio/business30.jpg">
+                  <img class="img-fluid image" src="img/portfolio/business30.jpg">
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-business">
+                <a class="lightbox" href="img/portfolio/business31.jpg">
+                  <img class="img-fluid image" src="img/portfolio/business31.jpg">
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-business">
+                <a class="lightbox" href="img/portfolio/business32.jpg">
+                  <img class="img-fluid image" src="img/portfolio/business32.jpg">
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-business">
+                <a class="lightbox" href="img/portfolio/business33.jpg">
+                  <img class="img-fluid image" src="img/portfolio/business33.jpg">
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-business">
+                <a class="lightbox" href="img/portfolio/business34.jpg">
+                  <img class="img-fluid image" src="img/portfolio/business34.jpg">
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-4 item zoom-on-hover portfolio-item filter-business">
+                <a class="lightbox" href="img/portfolio/business35.jpg">
+                  <img class="img-fluid image" src="img/portfolio/business35.jpg">
+                </a>
+              </div>
+
             </div>
           </div>
         </section>
@@ -752,7 +899,7 @@
                 <p>+38 (066) 394-67-54<br />+38 (067) 209-72-04<br />+38 (096) 100-85-10</p>
               </div>
             </div>
-            
+
             <!-- <div class="social-links">
               <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
               <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
