--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@
     <!--==========================
       Team Section
     ============================-->
-    <section id="team">
+    <!-- <section id="team">
       <div class="container wow fadeInUp">
         <div class="section-header">
           <h3 class="section-title">Команда</h3>
@@ -782,12 +782,12 @@
               <div class="pic"><img src="img/team1.jpg" alt=""></div>
               <h4>Николай Субботин</h4>
               <span>Директор по развитию</span>
-              <!-- <div class="social">
+              <div class="social">
                 <a href=""><i class="fa fa-twitter"></i></a>
                 <a href=""><i class="fa fa-facebook"></i></a>
                 <a href=""><i class="fa fa-google-plus"></i></a>
                 <a href=""><i class="fa fa-linkedin"></i></a>
-              </div> -->
+              </div>
             </div>
           </div>
 
@@ -796,12 +796,12 @@
               <div class="pic"><img src="img/team1.jpg" alt=""></div>
               <h4>Евгений Огородник</h4>
               <span>Технический Директор</span>
-              <!-- <div class="social">
+              <div class="social">
                 <a href=""><i class="fa fa-twitter"></i></a>
                 <a href=""><i class="fa fa-facebook"></i></a>
                 <a href=""><i class="fa fa-google-plus"></i></a>
                 <a href=""><i class="fa fa-linkedin"></i></a>
-              </div> -->
+              </div>
             </div>
           </div>
 
@@ -810,14 +810,14 @@
               <div class="pic"><img src="img/team1.jpg" alt=""></div>
               <h4>Валентин Сергеевич</h4>
               <span>Дизайнер</span>
-              <!-- <div class="social">
+              <div class="social">
                 <a href=""><i class="fa fa-twitter"></i></a>
                 <a href=""><i class="fa fa-facebook"></i></a>
                 <a href=""><i class="fa fa-google-plus"></i></a>
                 <a href=""><i class="fa fa-linkedin"></i></a>
-              </div> -->
+              </div>
             </div>
-          </div>
+          </div> -->
 
           <!-- <div class="col-lg-3 col-md-6">
             <div class="member">
